# flet_pdfrx

./: README.md  mkdocs.yml  pyproject.toml
examples/flet_pdfrx_example/: pyproject.toml
examples/flet_pdfrx_example/src/: main.py
src/flet_pdfrx/: flet_pdfrx.py
src/flet_pdfrx.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/flutter/flet_pdfrx/: pubspec.yaml
src/flutter/flet_pdfrx/lib/: flet_pdfrx.dart
src/flutter/flet_pdfrx/lib/src/: flet_pdfrx.dart
