[project]
name = "flet-pdfrx"
version = "0.1.0"
description = "FletPdfrx control for Flet"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Flet contributors", email = "you@example.com" }
]
dependencies = [
    "flet>=0.80.5",
]

[dependency-groups]
dev = [
    "mkdocs", 
    "mkdocs-material",
    "mkdocstrings[python]"
]

[project.urls]
Homepage = "https://mydomain.dev"
Documentation = "https://github.com/MyGithubAccount/flet-pdfrx"
Repository = "https://github.com/MyGithubAccount/flet-pdfrx"
Issues = "https://github.com/MyGithubAccount/flet-pdfrx/issues"

[tool.setuptools.package-data]
"flutter.flet_pdfrx" = ["**/*"]

[tool.setuptools]
license-files = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
